--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Vadivel's Personal Site</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -46,7 +47,7 @@
       </tr>
     </tbody>
   </table>
-<hr>
+  <hr>
   <h3>Skills</h3>
   <table cellspacing='10'>
     <tr>
